update package json

--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "jest": "^26.6.3",
     "lodash": "^4.17.20",
     "metro-react-native-babel-preset": "^0.64.0",
-    "mo-app-common": "https://github.com/nguyenlqxx82nb/mo-app-common.git",
-    "mo-app-comp": "https://github.com/nguyenlqxx82nb/mo-app-comp.git",
+    "mo-app-common": "https://github.com/nguyenlqxx82nb/mo-app-common.git#develop",
+    "mo-app-comp": "https://github.com/nguyenlqxx82nb/mo-app-comp.git#develop",
     "mo-app-layout": "https://github.com/nguyenlqxx82nb/mo-app-layout.git",
     "moment": "^2.29.1",
     "react": "^17.0.0",
